<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="LoadCellI" Id="{a0041e41-c42b-4712-b448-89813245e27d}">
    <Declaration><![CDATA[TYPE LoadCellI :
STRUCT
	AnalogSignal : INT;
	MaxSignalValue : INT;
	MaxUnitValue : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>