<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="LoadCellO" Id="{61f4dfde-6346-4f9a-ae17-3262f4737623}">
    <Declaration><![CDATA[TYPE LoadCellO :
STRUCT
	ScaledValue : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>